tests/ui/typeck/issue-104582.stderr
error: invalid `?` in type
  --> $DIR/issue-104582.rs:2:30
   |
LL |     let my_var: String(String?);
   |                              ^ `?` is only allowed on expressions, not types
   |
help: if you meant to express that the type might not contain a value, use the `Option` wrapper type
   |
LL -     let my_var: String(String?);
LL +     let my_var: String(Option<String>);
   |

error[E0214]: parenthesized type parameters may only be used with a `Fn` trait
  --> $DIR/issue-104582.rs:2:17
   |
LL |     let my_var: String(String?);
   |                 ^^^^^^^^^^^^^^^ only `Fn` traits may use parentheses
   |
help: use angle brackets instead
   |
LL -     let my_var: String(String?);
LL +     let my_var: String<String?>;
   |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0214`.
